@startuml
class com.example.carcontroller.devices_package.CarDevice {
- {static} String TAG
- BluetoothSocket bluetoothSocket
- CarConfiguration configuration
- OperationMode currentMode
+ void connect()
+ boolean disconnect()
+ boolean sendData(String)
+ void onDataReceived(String,byte[])
+ boolean isConnected()
+ boolean createConfiguration(float,float,float,float,float)
+ boolean sendCommand(Commands)
+ void setLineFollowing(boolean)
+ void setOperationMode(OperationMode)
+ boolean uploadPID()
+ void sendPIDValues(String)
- boolean checkConfigurationData(ConfigValidation,float)
+ OperationMode getCurrentMode()
+ CarConfiguration getConfiguration()
}


enum com.example.carcontroller.devices_package.OperationMode {
+  SETUP
+  DRIVE
+  LINE_FOLLOWER
}

enum com.example.carcontroller.devices_package.ConfigValidation {
+  PID
+  MOTOR_SPEED
}

class com.example.carcontroller.devices_package.CarDevice$CarConfiguration {
- Integer configurationId
- float kp
- float LMSW
- float baseLeftSpeed
- String creationDate
- float speedRightFWD
+ String getCreationDate()
+ void setCreationDate()
+ float getKp()
+ float getKi()
+ float getKd()
+ void setKp(float)
+ void setKi(float)
+ void setKd(float)
+ Integer getConfigurationId()
+ void setConfigurationId(Integer)
+ float getBaseLeftSpeed()
+ float getBaseRightSpeed()
+ void setBaseLeftSpeed(float)
+ void setBaseRightSpeed(float)
+ void setBaseSpeed(float,float)
+ float getLMSW()
+ float getLSW()
+ float getCSW()
+ float getRSW()
+ float getRMSW()
+ float getSpeedRightFWD()
+ float getSpeedLeftFWD()
+ float getSpeedRightBWD()
+ float getSpeedLeftBWD()
+ void setLMSW(float)
+ void setLSW(float)
+ void setCSW(float)
+ void setRSW(float)
+ void setRMSW(float)
+ void setSpeed(float,float,float,float)
+ void setSpeedFWD(float,float)
+ void setSpeedRightFWD(float)
+ void setSpeedLeftFWD(float)
+ void setSpeedBWD(float,float)
+ void setSpeedRightBWD(float)
+ void setSpeedLeftBWD(float)
}


enum com.example.carcontroller.main_package.Commands {
+  SETUPMODE
+  DRIVEMODE
+  LINEFOLLOWERMODE
+  STOP
+  FORWARD
+  REVERSE
+  LEFT
+  RIGHT
+  FORWARDLEFT
+  FORWARDRIGHT
+  REVERSLEFT
+  REVERSERIGHT
+  STOPFOLLOWLINE
+  STARTFOLLOWLINE
+  WAITFOR1
+  WAITFOR2
+  WAITFOR3
+  WAITFOR4
+  WAITFOR5
+  EMPTY
+  DETECTED
- String command
+ String getCommand()
}


class com.example.carcontroller.main_package.SessionManager {
- {static} String TAG
- {static} SessionManager instance
- RaceSession currentSession
- Driver currentDriver
- Circuit currentCircuit
- boolean driverLogged
+ {static} SessionManager getInstance()
+ void createNewRaceSession()
+ void startRaceSession()
+ void finishRaceSession()
+ void resetAllCheckpoints()
+ RaceSession getCurrentSession()
+ void createCircuit(String,String,String,CircuitType,Integer)
+ Circuit getCurrentCircuit()
+ Driver getCurrentDriver()
+ void setCurrentDriver(Driver)
+ boolean isDriverLogged()
}


class com.example.carcontroller.main_package.SessionManager$RaceSession {
- Integer raceId
- Driver driver
- String raceDate
- long startTime
- long finishTime
- long stopTime
- boolean active
- Map<Integer,Long> checkpointsTimeStamps
+ void setStartTime()
+ void setFinishTime()
+ long getStartTime()
+ long getFinishTime()
+ long getTotalTime()
+ String getRaceDate()
+ Integer getRaceId()
+ void setRaceId(Integer)
+ Long getCheckpointTime(int)
+ Map<Integer,Long> getAllCheckpointsTimes()
+ void recordCheckpointTime(int,long)
+ void displaySessionData()
}


class com.example.carcontroller.main_package.SessionManager$Driver {
- Integer driverId
- String driverFirstName
- String driverLastName
- String birthdate
- Gender gender
- int age
+ String getDriverName()
+ String getDriverFirstName()
+ String getDriverLastName()
+ int getDriverAge()
+ Gender getDriverGender()
+ String getBirthdate()
+ void setDriverFirstName(String)
+ void setDriverLastName(String)
+ void setAge(int)
+ void setGender(Gender)
+ void setBirthdate(String)
+ void setDriverId(int)
+ Integer getDriverId()
+ void logDriverDetails()
}


class com.example.carcontroller.main_package.SessionManager$Circuit {
- Integer circuitId
- String circuitName
- String cityName
- CircuitType circuitType
- String creationDate
- Integer segmentsCount
- ArrayList<SegmentDifficulty> segmentDifficulties
+ String getCircuitName()
+ void setCircuitName(String)
+ String getCityName()
+ void setCityName(String)
+ String getLocationName()
+ void setLocationName(String)
+ String getCreationDate()
+ void setCreationDate(String)
+ Integer getSegmentsCount()
+ void setSegmentsCount(Integer)
+ ArrayList<SegmentDifficulty> getSegmentDifficulties()
+ SegmentDifficulty getOneSegmentDifficulty(int)
+ void setSegmentDifficulties(ArrayList<SegmentDifficulty>)
+ void setOneSegmentDifficulty(int,SegmentDifficulty)
+ CircuitType getCircuitType()
+ void setCircuitType(CircuitType)
+ Integer getCircuitId()
+ void setCircuitId(Integer)
}


enum com.example.carcontroller.main_package.CircuitType {
+  LINE_FOLLOWER_CIRCUIT
+  DRIVER_CIRCUIT
}

enum com.example.carcontroller.main_package.Gender {
+  MALE
+  FEMALE
+  OTHER
}

enum com.example.carcontroller.main_package.SegmentDifficulty {
+  VERYEASY
+  EASY
+  AVERAGE
+  HARD
+  VERYHARD
}

class com.example.carcontroller.devices_package.DeviceManager {
- {static} String TAG
- {static} DeviceManager instance
- Map<Integer,CheckpointDevice> checkpoints
- List<Device> allDevices
- CarDevice carDevice
+ {static} DeviceManager getInstance()
+ void registerCarDevice(String,String,BluetoothSocket)
+ void registerCheckpointDevice(String,String,BluetoothSocket,int)
+ boolean disconnectAllDevices()
+ CarDevice getCarDevice()
+ CheckpointDevice getCheckpointDevice(int)
+ List<CheckpointDevice> getAllCheckpointDevices()
+ int getCheckpointsCount()
+ List<Device> getAllDevices()
+ boolean hasCarDevice()
+ boolean hasCheckpointDevice(int)
}


abstract class com.example.carcontroller.devices_package.Device {
- BluetoothService bluetoothService
- String deviceAddress
- DeviceType deviceType
- String deviceName
- DeviceStatus deviceStatus
+ BluetoothService getBluetoothService()
+ String getDeviceAddress()
+ String getDeviceName()
+ DeviceType getDeviceType()
+ DeviceStatus getDeviceStatus()
# void setDeviceStatus(DeviceStatus)
+ void setDeviceName(String)
+ {abstract}void connect()
+ {abstract}boolean disconnect()
+ {abstract}boolean sendData(String)
+ {abstract}boolean isConnected()
+ String getDeviceInfo()
}


enum com.example.carcontroller.devices_package.DeviceType {
+  CAR
+  CHECKPOINT
}

enum com.example.carcontroller.devices_package.DeviceStatus {
+  DISCONNECTED
+  CONNECTED
+  ERROR
}

class com.example.carcontroller.devices_package.CheckpointDevice {
- {static} String TAG
~ SessionManager sessionManager
- BluetoothSocket bluetoothSocket
- int checkpointIndex
- long detectionTime
- boolean carDetected
- Integer checkpointId
+ void connect()
+ boolean disconnect()
+ boolean sendData(String)
+ void onDataReceived(String,byte[])
+ boolean isConnected()
+ void processCheckpointData(String)
+ void resetCheckpoint()
+ long getDetectionTime()
+ void setDetectionTime(long)
+ boolean isCarDetected()
+ Integer getCheckpointId()
+ void setCheckpointId(Integer)
+ void displayCheckpointData()
}




com.example.carcontroller.devices_package.Device <|-- com.example.carcontroller.devices_package.CarDevice
com.example.carcontroller.devices_package.CarDevice +.. com.example.carcontroller.devices_package.CarDevice$CarConfiguration
com.example.carcontroller.main_package.SessionManager +.. com.example.carcontroller.main_package.SessionManager$RaceSession
com.example.carcontroller.main_package.SessionManager +.. com.example.carcontroller.main_package.SessionManager$Driver
com.example.carcontroller.main_package.SessionManager +.. com.example.carcontroller.main_package.SessionManager$Circuit
com.example.carcontroller.bluetooth_package.BluetoothDataListener <|.. com.example.carcontroller.devices_package.Device
com.example.carcontroller.devices_package.Device <|-- com.example.carcontroller.devices_package.CheckpointDevice
@enduml